# openssl-training

./: 1A  CMakeLists.txt  TAGS  compile_commands.json
apps/: main.c
include/1A/: 1A.h  digest.h  encrypt.h  my_hmac.h
src/: digest.c  encrypt.c  my_hmac.c
week1/1A/include/1A/: 1A.h  helper.h  my_hmac.h
week1/1A/src/: encrypt.c  helper.c  my_hmac.c
week1/1B/: CMakeLists.txt
week1/1B/apps/: 1B_helper.cpp  CMakeLists.txt  digest.cpp  main.cpp
week1/1B/include/1B/: 1B_helper.hpp  digest.hpp  encrypt.hpp  my_hmac.hpp
week1/1B/src/: encrypt.cpp  my_hmac.cpp
week2/2A/: cacert.pem  mycert.pem  mycert_fake.pem  myown1.csr  myown1.p12  myown1key.pem  openssl1.cnf
week2/2A/demoCA/: index.txt  index.txt.old  serial  serial.old
week2/2A/demoCA/newcerts/: 49EA0000000004499C579EC5.pem
week2/2A/demoCA/private/: cakey.pem
week2/2B/: CMakeLists.txt
week2/2B/apps/: 2B_main.c
week2/2B/include/2B/: sign.h  sign_helper.h
week2/2B/src/: sign.c  sign_helper.c
week2/2C/: CMakeLists.txt
week2/2C/apps/: 2C_main.c
week2/2C/include/2C/: 2C_helper.h  2C_main.h  create_csr.h
week2/2C/src/: 2C_helper.c  create_csr.c
week3/3A/: CMakeLists.txt
week3/3A/apps/: 3A_main.c
week3/3A/include/3A/: 3A_main.h  evp_helper.h  evp_open.h  evp_seal.h
week3/3A/src/: evp_helper.c  evp_open.c  evp_seal.c
week3/3B/: envp.eml  envp2.eml
week4/4A/: CMakeLists.txt
week4/4A/apps/: 4A_helper.c  4A_main.c  CMakeLists.txt
week4/4A/include/4A/: 4A_helper.h  4A_main.h
